--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^9.8.6",
     "custom-cursor-react": "^1.0.5",
     "emailjs": "^3.5.0",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^3.2.3",
     "lottie-web": "^5.7.5",
     "postcss": "^7.0.35",
